# routes/api.php
@@ -12,12 +12,13 @@ use App\Http\Controllers\Auth\AuthController;
 
 Route::group(['prefix' => 'v1'], function () {
     
-    Route::post('login', [AuthController::class, 'login']);
-    Route::post('signup', [AuthController::class, 'store']);
+    Route::post('/login', [AuthController::class, 'login']);
+    Route::post('/signup', [AuthController::class, 'store']);
+    Route::post('/verified/{token}', [AuthController::class, 'verifiedMail'])->name('verified.mail');
 
     Route::middleware('auth:api')->group(function () {
 
-        Route::post('logout', [AuthController::class, 'destroy']);
+        Route::post('/logout', [AuthController::class, 'destroy']);
 
         Route::prefix('user')->group(function () {
             Route::get('/', [AuthController::class, 'getUsers']);
